# Django_project

./: .env  .env.example  Dockerfile  autoria_project.postman_collection.json  docker-compose.yml  pyproject.toml  requirements.txt
apps/announcement/: managers.py  models.py  serializer.py  urls.py  views.py
apps/announcement/choices/: status_type_choices.py
apps/announcement/migrations/: 0002_announcement_place.py  0007_announcement_edit_attempts.py
apps/auth/: urls.py  views.py
apps/cardealership/: urls.py  views.py
apps/cars/: managers.py  models.py  serializer.py  urls.py  views.py
apps/cars/migrations/: 0001_initial.py  0002_alter_carmodel_unique_together.py  0002_carmodel_user.py  0003_alter_carmodel_unique_together.py
apps/employees_dealership/: apps.py  urls.py  views.py
apps/subscription/: managers.py  serializer.py  urls.py  views.py
apps/users/: managers.py  models.py  serializer.py  urls.py  views.py
backend/apps/announcement/: urls.py  (+4 more)
backend/configs/: asgi.py  routing.py  settings.py  urls.py
backend/core/: models.py  pagination.py
backend/templates/: email_message_to_manager.html
client/: asset-manifest.json  index.html
configs/: settings.py  urls.py
configs/extra_conf/: jwt_conf.py  rest_conf.py
core/permissions/: is_admin_or_write_only.py  is_auth_or_read_only.py  is_manager_permission.py  is_super_user_permission.py
core/services/: currency_service.py  email_service.py  payment_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js  router.js
templates/: email_message_to_manager.html
(+77 files in other folders)
